syntax = "proto3";

package l10n;

option go_package = "github.com/empirefox/protoc-gen-dart-ext/pkg/l10n";

import "google/protobuf/descriptor.proto";

extend google.protobuf.EnumOptions {
  l10n.Arb enumArb = 919110;
}
extend google.protobuf.EnumValueOptions {
  l10n.ValueArb valueArb = 919110;
}
extend google.protobuf.MessageOptions {
  l10n.Arb msgArb = 919110;
}
extend google.protobuf.OneofOptions {
  l10n.OneofArb oneofArb = 919110;
}
extend google.protobuf.FieldOptions {
  l10n.FieldArb fieldArb = 919110;
}

message ValueArb {
  bool ignore = 1;
  string value = 2;
  string desc = 3;
}

message OneofArb {
  bool ignore = 1;
  string value = 2;
  // can be "$" to use label
  string desc = 3;
  string label = 4;
  string prefix = 5;
  string suffix = 6;
}

// all Arb(s) must sync with imports
message Arb {
  bool ignore = 1;
  string value = 2;
  // can be "$" to use label
  string desc = 3;
  string label = 4;
  string helper = 5;
  string hint = 6;
  string prefix = 7;
  string suffix = 8;
}

message FieldArb {
  bool ignore = 1;
  string value = 2;
  // can be "$" to use label
  string desc = 3;
  string label = 4;
  string helper = 5;
  string hint = 6;
  string prefix = 7;
  string suffix = 8;
  string boolTrue = 9;
  string boolFalse = 10;
}
